tests/integration/snapshots/integration_test__lint_fmt__lint_checks_include_paths_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"clean: {}\\n{}\", report.is_clean(), report.to_text(\"fixture.org\"))"
---
clean: false
fixture.org:3:1: error ORG003: include path `missing.org` was not found
fixture.org:4:1: error ORG003: include path `folder` is not a file
