tests/integration/snapshots/integration_test__lint_fmt__lint_cli_checks_include_paths_relative_to_file_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: command_snapshot(output)
---
status: 1
stdout:
{"files":[{"path":"notes/main.org","findings":[{"code":"ORG003","severity":"error","message":"include path `missing.org` was not found","location":{"line":3,"column":1,"end_line":4,"end_column":1,"range_start":60,"range_end":85}},{"code":"ORG003","severity":"error","message":"include path `folder` is not a file","location":{"line":4,"column":1,"end_line":5,"end_column":1,"range_start":85,"range_end":105}}]}]}

stderr:
