tests/integration/snapshots/integration_test__lint_fmt__lint_cli_json_stdin_output_is_snapshotted.snap
---
source: tests/integration/lint_fmt.rs
expression: command_snapshot(output)
---
status: 1
stdout:
{"files":[{"path":"<stdin>","findings":[{"code":"ORG002","severity":"error","message":"target `id:shared` is defined 2 times","location":{"line":3,"column":6,"end_line":3,"end_column":12,"range_start":26,"range_end":32}},{"code":"ORG001","severity":"error","message":"internal link target `fn:missing` was not found","location":{"line":9,"column":1,"end_line":9,"end_column":15,"range_start":79,"range_end":93}}]}]}

stderr:
