tests/integration/snapshots/integration_test__lint_fmt__lint_cli_text_stdin_output_is_snapshotted.snap
---
source: tests/integration/lint_fmt.rs
expression: command_snapshot(output)
---
status: 1
stdout:
<stdin>:3:6: error ORG002: target `id:shared` is defined 2 times
<stdin>:9:1: error ORG001: internal link target `fn:missing` was not found

stderr:
