tests/integration/snapshots/integration_test__lint_fmt__lint_reports_duplicate_macro_definitions_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"clean: {}\\n{}\", report.is_clean(), report.to_text(\"fixture.org\"))"
---
clean: false
fixture.org:2:1: warning ORG008: macro `issue` is defined 2 times
