tests/integration/snapshots/integration_test__lint_fmt__lint_reports_link_abbreviation_definition_issues_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"clean: {}\\n{}\", report.is_clean(), report.to_text(\"fixture.org\"))"
---
clean: false
fixture.org:2:1: warning ORG005: LINK keyword is missing an abbreviation name or replacement
fixture.org:3:1: warning ORG006: link abbreviation `gh` is defined 2 times
