tests/integration/snapshots/integration_test__lint_fmt__lint_reports_missing_macro_definitions_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
assertion_line: 108
expression: "format!(\"clean: {}\\n{}\", report.is_clean(), report.to_text(\"fixture.org\"))"
---
clean: false
fixture.org:1:1: warning ORG044: document is missing a #+TITLE keyword (contract `orgize.builtin.document-metadata.v1` assertion `document.has-title-keyword` failed in document `<document>`: expected exists, actual 0) Suggested fix: add a non-empty #+TITLE keyword near the top of the document
fixture.org:1:1: warning ORG044: document is missing document-level properties (contract `orgize.builtin.document-metadata.v1` assertion `document.has-properties` failed in document `<document>`: expected exists, actual 0) Suggested fix: add document-level properties with #+PROPERTY metadata
fixture.org:3:1: warning ORG004: macro `missing` has no local definition
